Envoy/ex/Envoy/envoy.yaml
# An example config which accepts HTTP/1 requests over TCP and forwards them to google using HTTP/3
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 9901
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/web1"
                route:
                  prefix_rewrite: "/WeatherForecast"
                  cluster: webapi1_service
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: webapi1_service
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: webapi1_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webapi1
                port_value: 80
